# rps

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.c  config.h  err.h  file.c  file.h  manifest.c  manifest.h  mpk.c  mpk.h  package.c  package.h  pkginfo.c  pkginfo.h  pkgref.c  pkgref.h  stringhelper.c  stringhelper.h  stringlist.c  stringlist.h  version.c  version.h
doc/: Doxyfile.in  MPK Package Manager.lyx  build-instructions  manifest_fsm.gv  mpk-backend-frontent-protocol.md  package-format.md  rps.adoc  system-architecture.md
ext/jsmn/: CMakeLists.txt
include/mpk/: defines.h  err.h  file.h  manifest.h  mpk.h  pkginfo.h  pkgref.h  stringlist.h  version.h
include/rps/: defines.h  exception.h  file.h  manifest.h  mpk.h  package.h  pkginfo.h  pkgref.h  stringlist.h  version.h
lib/: exception.cpp  file.cpp  manifest.cpp  package.cpp  stringhelper.cpp  stringhelper.h  version.cpp
lib/test/: main.cpp
mpk/: file.c  filehandling.c  filehandling.h  install.c  install.h  manifest.c  mpk.c  package.c  package.h  pkginfo.c  pkgref.c  stringlist.c
mpm/: CMakeLists.txt  main.c  main.cpp
mpm-client/: CMakeLists.txt  main.c  main.cpp
samples/: CMakeLists.txt  mpk_client.c
src/: config.c  config.h  file.c  file.h  filehandling.c  filehandling.h  manifest.c  manifest.h  mpk.c  package.c  package.h  pkginfo.c  pkginfo.h  pkgref.c  pkgref.h  stringhelper.c  stringhelper.h  stringlist.c  stringlist.h  version.c  version.h
src/rps/: CMakeLists.txt  exception.cpp  file.c  file.cpp  filehandling.c  filehandling.cpp  filehandling.h  install.c  install.cpp  install.h  manifest.c  manifest.cpp  mpk.c  mpk.cpp  package.c  package.cpp  package.h  pkginfo.cpp  pkgref.c  pkgref.cpp  stringhelper.c  stringlist.c  stringlist.cpp  version.c  version.cpp
src/rps-client/: CMakeLists.txt  main.cpp
src/rps-tools/: CMakeLists.txt  command.cpp  command.h  createcommand.cpp  createcommand.h  installcommand.cpp  installcommand.h  rps-client.cpp  rps-create.cpp  rps-package.cpp  unpackcommand.cpp  unpackcommand.h
src/test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
test/testdata/: privkey.pem  testpackage-1.2.0-R2013031915000000.mpk
test/testdata/testpackage/: .directory  manifest-tmpl.json  manifest.txt.tmpl
test/testdata/testpackage/control/: cleanup.sh
test/testdata/testpackage/data/: do_not_include_this_file
test/testdata/testpackage/tool/: install.sh  prepare.sh  uninstall.sh
test/testdata/testpackage2/: manifest-tmpl.json
testdata/: testpackage-12-armv7hf.rps
testdata/testpackage/: manifest.json
tools/: command.cpp  command.h  createcommand.cpp  createcommand.h  installcommand.cpp  installcommand.h  rps-client.cpp  rps-package.cpp  unpackcommand.cpp  unpackcommand.h
